# TAMCMC-C-

./: ._CHANGELOG.md  ._CMakeLists.txt  ._README.md  CHANGELOG.md  CMakeLists.txt  Compile.txt  HOW_TO_COMPILE.txt  MALA.cpp  MALA.h  MCMC_Atchade_test.cpp  NOTES.txt  README.md  build_lorentzian.cpp  build_lorentzian_test.cpp  config.cpp  config.h  cpptamcmc  data.h  function_rot_test.cpp  interpol.cpp  likelihoods.cpp  likelihoods_test.cpp  matrices.cpp  matrices.h  matrix3d_test.cpp  model_MS_test.cpp  model_def.cpp  model_def.h  models.cpp  models.h  noise_models.cpp  noise_models_test.cpp  outputs.cpp  outputs.h  playground.cpp  pmode.h  priors_calc.cpp  priors_calc.h  test-gauss.txt
1.3.1/: README.md
1.3.1/Config/: config_presets.cfg
1.3.1/Config/templates/model_Harvey_Gaussian/: config_presets.cfg
1.3.1/Config/templates/model_Test_Gaussian/: config_default.cfg
1.3.1/scripts/slurm/: job_array.sh
1.3.1/tamcmc/headers/: MALA.h  build_lorentzian.h  config.h  data.h  diagnostics.h  io_ms_global.h  likelihoods.h  model_def.h  models.h  noise_models.h  priors_calc.h
1.3.1/tamcmc/sources/: MALA.cpp  ben_timer.cpp  io_ms_global.cpp.bak  main.cpp  noise_models.cpp
1.3.1/test/inputs/: 00088.1.model
Config/: config_presets.cfg
Config/default/: ._config_default.cfg  ._errors_default.cfg  config_default.cfg  config_default.cfg.keplerdata  errors_default.cfg  errors_default.cfg.keplerdata  likelihoods_ctrl.list  models_ctrl.list  primepriors_ctrl.list  priors_ctrl.list
Config/templates/model_Harvey_Gaussian/: ._config_default.cfg  ._config_presets.cfg  config_default.cfg
Config/templates/model_Test_Gaussian/: ._config_default.cfg  ._config_presets.cfg  config_presets.cfg
Data_Tests/: test-gauss.txt
Docs/: ._bib_Othman.bib  ._humannat.bst  ._instructions.tex  ._journals.tex  bib_Othman.bib  changelog.md  instructions.tex  instructions.toc  journals.tex
IDL_programs/: outputs_txt_lib.pro  read_params.pro  show_model_test_gaussian.pro
TAMCMC-C/: CHANGELOG.md  CMakeLists.txt  NOTE.txt  cpptamcmc
TAMCMC-C/Config/: config_presets.cfg
TAMCMC-C/Config/default/: config_default.cfg  likelihoods_ctrl.list  models_ctrl.list  priors_ctrl.list
TAMCMC-C/scripts/slurm/: job.sh
TAMCMC-C/tamcmc/headers/: config.h  config_presets.h  data.h  io_models.h  io_ms_global.h  string_handler.h  version.h
TAMCMC-C/tamcmc/sources/: build_lorentzian.cpp  config.cpp  io_models.cpp  io_ms_global.cpp  main.cpp  model_def.cpp.bak  models.cpp  multivariate_cholesky.cpp  priors_calc.cpp.bak  random_JB.cpp
TAMCMC-C/tamcmc/sources/tmp/: io_ms_global_l1only.cpp  io_ms_global_l2only.cpp
TAMCMC-C/tools/: bin2txt_params.cpp  read_stats.cpp
Tests/: class_test  class_test.cpp  config.cfg  test_libconfig.cpp  tinytest.cpp
scripts/slurm/: job.sh  job_array.sh
tamcmc/headers/: ._MALA.h  ._config.h  ._config_presets.h  ._data.h  ._io_local.h  ._io_models.h  ._io_ms_global.h  ._version.h  MALA.h  build_lorentzian.h  config.h  config_presets.h  data.h  data.h.bak  diagnostics.h  function_rot.h  io_asymptotic.h  io_evolved_global.h  io_local.h  io_models.h  io_models.h.bak  io_ms_global.h  likelihoods.h  matrices.h  model_def.h  models.h  noise_models.h  outputs.h  priors_calc.h  stats_dictionary.h  string_handler.h  string_handler.h~  version.h
tamcmc/sources/: ._MALA.cpp  ._config.cpp  ._config_presets.cpp  ._io_local.cpp  ._io_models.cpp  ._io_ms_global.cpp  ._main.cpp  ._model_def.cpp  ._models.cpp  MALA.cpp  build_lorentzian.cpp  config.cpp  config_presets.cpp  diagnostics.cpp  function_rot.cpp  interpol.cpp  io_asymptotic.cpp  io_evolved_global.cpp  io_local.cpp  io_models.cpp  io_models.cpp.bak  io_ms_global.cpp  likelihoods.cpp  main.cpp  matrices.cpp  model_def.cpp  models.cpp  models_asymptotics.cpp  outputs.cpp  priors_calc.cpp  random_JB.cpp  stats_dictionary.cpp  string_handler.cpp  version.cpp
test/inputs/: ._00088.0.model  ._kplr008379927_kasoc-psd_slc_v2_1000.model  ._kplr008379927_kasoc-psd_slc_v2_1000_local.model  00046.0.model.orig  00046.0_othman.model  00046.0_v2.model  00088.0.model  008751420.model  008751420_fast.model  008751420_fast_v3.model  012508433.model  012508433_fast.model  TF_3443483_local-v3.model  kplr008379927_kasoc-psd_slc_v2_1000.model  kplr008379927_kasoc-psd_slc_v2_1000_local-v2.model  kplr008379927_kasoc-psd_slc_v2_1000_local.model  kplr008379927_kasoc-psd_slc_v2_1100_a2.model  kplr008379927_kasoc-psd_slc_v2_1100_a2_0_a2_1.model  kplr008379927_kasoc-psd_slc_v2_1100_a2_0_a2_1_a2_2.model
test/inputs/Bugs-Yuting/: 02194.0.model  02199.0.model
test/inputs/inputs/: 008751420.data  008751420_fast.model  012508433.data  012508433.model  012508433_fast_smallspace.model  TF_3443483_local-v3.data  kplr008379927_kasoc-psd_slc_v2_1000_local-v2.model
test/outputs/00046.0_v2/diags/: 00046.0_v2_1_B_acceptance.eps  (+3 more)
test/outputs/kplr008379927_kasoc-psd_slc_v2_1000/: version.txt
tmp/: graph_tmp_52319.txt  graph_tmp_52552.txt  graph_tmp_52610.txt  graph_tmp_52998.txt  graph_tmp_53383.txt  graph_tmp_53439.txt  hist_tmp_52319.txt  hist_tmp_52354.txt  hist_tmp_52552.txt  hist_tmp_52610.txt  hist_tmp_52671.txt  hist_tmp_52794.txt  hist_tmp_52998.txt  hist_tmp_53081.txt  hist_tmp_53137.txt  hist_tmp_53203.txt  hist_tmp_53266.txt  hist_tmp_53330.txt  hist_tmp_53383.txt  hist_tmp_53439.txt
tools/: ._README.md  CMakeCache.txt  README.md  README.txt  a2_nl.py  bin2txt_params.cpp  getmodel.cpp  models_ctrl.list  nusini_nucosi_disociator.py  param_crash_debug.txt  param_crash_debug_2.txt  param_crash_debug_3.txt  param_crash_debug_4.txt  param_crash_debug_5.txt  param_crash_debug_getmodel.txt  params.model  test_getmodel.in  test_solver.cpp  testsolver_mm
tools/bin2txt/: README.txt
tools/data_extract_IDL/: MS_Global_fitplot.pro  PostMCMC_showbestfit.pro  ascii2sav.pro  build_histogram_v2.pro  diagnose_chains.pro  estimate_1_sigma_error.pro  fimp.pro  histograms_bin2txt_params.pro  models_ctrl.list  nice_hist1D.pro  nimp.pro  read_bin2txt_files.pro  select_max_values.pro
tools/getmodel/: README.txt
(+282 files in other folders)
